# Societas

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MASTER_DESIGN.md  MASTER_VALUES.md  PROGRESS.md  README.md  ROADMAP.md  SECURITY.md  SUMMARY.md  TECH-LEAD-DESIGN-FINAL.md  conftest.py  fix-policycategory-cors.patch.md  package-lock.json  package.json  pyproject.toml  societas.db  societas.db-shm  societas.db-wal  societas_dashboard_ledger.html  societas_worldmonitor_overhaul.html  start.bat  start.sh  sweeping-guide.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.obsidian/: graph.json  workspace.json
.serena/: project.yml
shared/: README.md  __init__.py  pyproject.toml
shared/constants/: __init__.py  defaults.py  simulation_constants.py  thresholds.py
shared/dto/: __init__.py  agent_dto.py  metrics_dto.py  policy_dto.py  simulation_dto.py
shared/events/: __init__.py  news_events.py  policy_events.py  simulation_events.py
shared/interfaces/: __init__.py  i_agent.py  i_ai_router.py  i_data_repository.py  i_event_bus.py  i_policy_engine.py  i_simulation_engine.py
shared/schemas/: __init__.py  agent_state.py  crime_state.py  dashboard_state.py  decision.py  economy_state.py  metrics.py  needs_state.py  news_event.py  policy.py  population_stats.py  psychology_state.py  save_state.py  simulation_state.py  tick_result.py
shared/types/: __init__.py  aliases.py  enums.py
shared/utilities/: __init__.py  deterministic_rng.py  json_helpers.py
(+383 files in other folders)
