[project]
name = "societas"
version = "0.1.0"
description = "AI-powered governance and society simulation platform"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "SOCIETAS Team" },
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG", "C4", "T20"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_any_unimported = false

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["simulation", "backend"]
omit = ["*/tests/*", "*/__pycache__/*", "*.pyc"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
